# runelite-herb-farm-calculator

./: .gitignore  README.md  build.gradle  config.json  runelite-plugin.properties  settings.gradle  simulation.py
simulator/: Cargo.toml  max.json  min.json
simulator/src/: config.rs  main.rs  models.rs  state.rs  util.rs
src/main/java/me/lucaspickering/: AnimaPlant.java  Compost.java  Herb.java  HerbCalculatorPatchResult.java  HerbCalculatorResult.java  HerbFarmCalculator.java  HerbFarmCalculatorConfig.java  HerbFarmCalculatorPanel.java  HerbFarmCalculatorPlugin.java  HerbPatch.java  UIHerbSlot.java  Utils.java
src/main/java/me/lucaspickering/utils/: AnimaPlant.java  Compost.java  Herb.java  HerbCalculatorPatchResult.java  HerbCalculatorResult.java  HerbPatch.java  HerbPatchBuffs.java  HerbPatchResult.java  HerbResult.java  SortingCriteria.java  SurvivalChance.java  Utils.java
src/test/java/me/lucaspickering/: HerbFarmCalculatorPluginTest.java
